2004-12-24  Mark Kettenis  <kettenis@gnu.org>

	* target.h (TARGET_DISABLE_HW_WATCHPOINTS)
	(TARGET_ENABLE_HW_WATCHPOINTS): Remove macros.
	* infrun.c (struct execution_control_state): Remove
	enable_hw_watchpoints_after_wait member.
	(number_of_threads_in_syscalls): Remove variable.
	(init_wait_for_inferior): Don't initialize
	number_of_threads_in_syscalls.
	(init_execution_control_state): Don't initialize
	ECS->enable_hw_watchpoints_after_wait.
	(handle_inferior_event): Never invoke TARGET_ENABLE_HW_WATCHPOINTS
	or TARGET_DISABLE_HW_WATCHPOINTS.

2004-12-23  Mark Kettenis  <kettenis@gnu.org>

	* i386-nto-tdep.c: Reorder include files.
	(i386nto_svr4_fetch_link_map_offsets): Remove function.
	(init_i386nto_ops, i386nto_init_abi): Use
	svr4_ilp32_fetch_link_map_offsets instead of
	i386nto_svr4_fetch_link_map_offsets.

2004-12-21  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.c (hppa_frame_prev_register_helper): Make 64-bit safe.

2004-12-21  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.c (hppa64_return_value): Fix previous commit.

2004-12-21  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.c (hppa32_return_value): Move further down.
	(hppa64_return_value): Re-implement.

2004-12-21  Jim Blandy  <jimb@redhat.com>

	* remote.c (fetch_register_using_p): Fix formatting.
	
2004-12-21  Paul N. Hilfinger  <hilfingr@otisco.mckusick.com>

	* ada-lang.c (ada_print_subexp): Remove i18n markup from Ada code
	output.
	* ada-typeprint.c (ada_typedef_print): Ditto.
	(print_unchecked_union_type): Ditto.
	(print_record_type): Ditto, and correct output for non-derived
	types that was inadvertently left off during the markup.

2004-12-19  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-tdep.c (hppa64_hpux_search_dummy_call_sequence): Check
	whether the name returned by find_pc_partial_function is a null
	pointer, not whether it is an empty string.

	* hppa-tdep.h (hppa_regnum): Add HPPA_DP_REGNUM, HPPA_RET0_REGNUM,
	HPPA_RET1_REGNUM and HPPA64_FP4_REGNUM.